--- a/jruby-rails/Gemfile
+++ b/jruby-rails/Gemfile
@@ -4,6 +4,7 @@ source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.1'
 # Use jdbcpostgresql as the database for Active Record
+gem 'activerecord-jdbc-adapter', '~> 1.3.16', platform: :jruby
 gem 'activerecord-jdbcpostgresql-adapter'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
